wrote swagger doc for order route
