# Server/src/routes/order.route.ts
@@ -17,7 +17,7 @@ class orderRoute implements Routes {
 
   private initializeRoutes() {
     this.router.post('/', jwtPassport, validate(orderDto, 'body'), this.controller.addOrder);
-    this.router.get('/:id', this.controller.getOrderById);
+    this.router.get('/:id', jwtPassport, this.controller.getOrderById);
   }
 }
 
