# Server/swagger.yaml
@@ -10,10 +10,10 @@ tags:
   externalDocs:
     description: "Check Github"
     url: "https://github.com/SuhravHussen/MBeBazar-ecommerce/tree/main/Server"
-- name: "user"
-  description: "Operations about user"
+- name: "Order"
+  description: "Order product"
   externalDocs:
-    description: "Check Github"
+    description: "Order products"
     url: "https://github.com/SuhravHussen/MBeBazar-ecommerce/tree/main/Server"
 schemes:
 - "https"
@@ -362,18 +362,134 @@ paths:
            
               error: 
                 type: boolean                                     
-securityDefinitions:
-  petstore_auth:
-    type: "oauth2"
-    authorizationUrl: "http://petstore.swagger.io/oauth/dialog"
-    flow: "implicit"
-    scopes:
-      write:pets: "modify pets in your account"
-      read:pets: "read your pets"
-  api_key:
-    type: "apiKey"
-    name: "api_key"
-    in: "header"
+  /order:
+
+    post:
+      tags:
+      - "Order"
+      summary: "order desire product"
+      description: "This api for ordering products. must have jwt token in the cookies otherwise it will give unauthorize error"
+      operationId: "addOrder"
+      produces:
+      - "application/json"
+      parameters: 
+      - in: "body"
+        name: ""
+        description: "give order object  in req object"
+        required: true
+        schema:
+          type: object
+          $ref: '#/definitions/Order'
+      - in: "cookies"
+        name: jwt token
+        description: must have jwt token and refresh token in cookies    
+        required: true
+      responses:
+        "201":
+          description: "added successfully"
+          schema:
+            type: object
+            properties:
+              data:
+                type: array
+                items: 
+                  $ref: '#/definitions/Order'
+              message:
+                type: "string"
+              error: 
+                type: boolean
+                default: false
+        "500":
+          description: "Internal server error"
+          schema:
+            type: object
+            properties:
+              data:
+                type: array
+                items: 
+                  type: string
+                example: []  
+              message:
+                type: "string"
+           
+              error: 
+                type: boolean
+        "401":
+          description: "Unauthorized"
+          schema:
+            type: object
+            properties:
+              data:
+                type: array
+                items: 
+                  type: string
+                example: []  
+              message:
+                type: "string"
+           
+              error: 
+                type: boolean        
+  /order/{id}:
+    get:
+      tags:
+      - "Order"
+      summary: "Returns orders by  id"
+      description: "It will return  order by user id"
+      operationId: "getOrdersById"
+      parameters: 
+      - in: "path"
+        name: "id"
+        description: "mongodb id of product"
+        required: true
+        schema:
+         type: string
+        example: "629ef076d43eb983f88afcb1"  
+        
+      produces:
+      - "application/json"
+      responses:
+        "200":
+          description: "got orders successfully"
+          schema:
+            type: object
+            properties:
+              data:
+                $ref: '#/definitions/Order'        
+              message:
+                type: "string"
+           
+              error: 
+                type: boolean
+                default: false
+        "500":
+          description: "Internal server error"
+          schema:
+            type: object
+            properties:
+              data:
+                example: {}
+              message:
+                type: "string"
+           
+              error: 
+                type: boolean 
+
+        "401":
+          description: "Unauthorized"
+          schema:
+            type: object
+            properties:
+              data:
+                type: array
+                items: 
+                  type: string
+                example: []  
+              message:
+                type: "string"
+           
+              error: 
+                type: boolean                         
+
 definitions:
   Product:
     type: "object"
@@ -415,30 +531,55 @@ definitions:
   Order:
     type: "object"
     properties:
-      id:
-        type: "integer"
-        format: "int64"
-      petId:
-        type: "integer"
-        format: "int64"
-      quantity:
-        type: "integer"
-        format: "int32"
-      shipDate:
-        type: "string"
-        format: "date-time"
-      status:
-        type: "string"
-        description: "Order Status"
-        enum:
-        - "placed"
-        - "approved"
-        - "delivered"
-      complete:
-        type: "boolean"
-        default: false
-    xml:
-      name: "Order"
+      bookingInfo :
+        type: object
+        required: true
+        properties:
+          name: 
+            required: true
+            type: string
+            example: "customer name"
+          address:
+            type: string
+            example: 'm saifur rahman road , moulvibazar'  
+          phone:
+            type: number
+            example: 01700000000
+          totalPrice:
+            type: number
+            example: 343
+          shippingPrice:
+             type: number
+             example: 100
+          shippingMethod:
+             type: string
+             enum:   ['COD','RedX', 'Paperfly' ]
+          status:
+              type: string
+              enum: ['pending' , 'processing' , 'cancelled' , 'delivered']   
+          payment: 
+              type: string
+              enum: ['pending' , 'success' , 'failed']
+          paymentMethod:
+              type: string
+              enum: ['COD' , 'CreditCard']   
+      user :
+         type: string
+         example: "6sdsdsadsdsfffddfd"
+      items:
+         type: array
+         items:
+           type: object
+           properties:
+             product:
+               type: string
+               example: "sdjksdjjsdhdsd"
+             quantity:
+                type : number
+                example: 5
+             price:
+                type: number
+                example: 50                   
   Category:
     type: "object"
     properties:
